Do not reference SchemaNode.getPath() for operation results
The request is either an RPC or an action. We have the path for the
latter readily-available and construct it for the former. Update the
dispatch and clean up the source code a bit as well.

JIRA: NETCONF-817
Change-Id: Ie4e273e0eb499498c0d6b833fb11e4ca115ca989
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>